Radio buttons for the carousel and styles

--- a/index.html
+++ b/index.html
@@ -7,9 +7,15 @@
 <body>
 
     <div class="carousel">
-        <div class="carouselSlideControls">
+        <div class="carouselSlideMainControls">
             <button class="slidePrevious"> &lt;<span class="offscreen">Previous</span></button>
             <button class="slideNext"><span class="offscreen">Next</span>&gt;</button>
+        </div>
+        <div class="carouselSlideRadioControls">
+        <input type="radio" />
+        <input type="radio" />
+        <input type="radio" />
+        <input type="radio" />
         </div>
         <ol class="carouselSlides">
             <li class="slide">
