Now the main buttons can be used to navigate through the images

--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
             <button class="slideNext"><span class="offscreen">Next</span>&gt;</button>
         </div>
         <div class="carouselSlideRadioControls">
-        <input type="radio" />
-        <input type="radio" />
-        <input type="radio" />
-        <input type="radio" />
+            <input type="radio" name="carouselSlide" data-slide="1" checked="checked" />
+            <input type="radio" name="carouselSlide" data-slide="2"/>
+            <input type="radio" name="carouselSlide" data-slide="3"/>
+            <input type="radio" name="carouselSlide" data-slide="4"/>
+            <input type="radio" name="carouselSlide" data-slide="5"/>
         </div>
         <ol class="carouselSlides">
             <li class="slide">
